--- a/MRM/MRM.csproj
+++ b/MRM/MRM.csproj
@@ -232,6 +232,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-datepicker.js" />
+    <Content Include="Content\bootstrap-multiselect.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\datepicker3.css" />
@@ -248,7 +249,9 @@
     <None Include="NLog.xsd">
       <SubType>Designer</SubType>
     </None>
+    <None Include="Properties\PublishProfiles\mrmlight - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\mrmlightapp - Web Deploy.pubxml" />
+    <None Include="Properties\PublishProfiles\mrmlightv2 - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
