--- a/MRM/MRM.csproj
+++ b/MRM/MRM.csproj
@@ -236,6 +236,21 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\datepicker3.css" />
+    <Content Include="Content\Multi-Select\chosen-sprite%402x.png" />
+    <Content Include="Content\Multi-Select\chosen-sprite.png" />
+    <Content Include="Content\Multi-Select\chosen.css" />
+    <Content Include="Content\Multi-Select\chosen.jquery.js" />
+    <Content Include="Content\Multi-Select\chosen.jquery.min.js" />
+    <Content Include="Content\Multi-Select\chosen.min.css" />
+    <Content Include="Content\Multi-Select\chosen.proto.js" />
+    <Content Include="Content\Multi-Select\chosen.proto.min.js" />
+    <Content Include="Content\Multi-Select\docsupport\chosen.png" />
+    <Content Include="Content\Multi-Select\docsupport\init.js" />
+    <Content Include="Content\Multi-Select\docsupport\init.proto.js" />
+    <Content Include="Content\Multi-Select\docsupport\oss-credit.png" />
+    <Content Include="Content\Multi-Select\docsupport\prism.css" />
+    <Content Include="Content\Multi-Select\docsupport\prism.js" />
+    <Content Include="Content\Multi-Select\docsupport\style.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
