--- a/MRM/MRM.csproj
+++ b/MRM/MRM.csproj
@@ -299,6 +299,7 @@
     <None Include="Properties\PublishProfiles\mrmlightv2 - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\CampaignList.js" />
+    <Content Include="Scripts\ChildCampaignList.js" />
     <Content Include="Scripts\ChildScript.js" />
     <Content Include="Scripts\Configuration.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
@@ -315,6 +316,7 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
+    <Content Include="Scripts\TacticCampaignList.js" />
     <Content Include="Scripts\TacticsScript.js" />
     <Content Include="Scripts\_references.js" />
     <Content Include="Web.config">
@@ -347,6 +349,8 @@
     <Content Include="Views\ChildCampaign\ChildCampaignForm.cshtml" />
     <Content Include="Views\TacticCampaign\TacticCampaignForm.cshtml" />
     <Content Include="Views\MasterCampaign\CampaignList.cshtml" />
+    <Content Include="Views\ChildCampaign\ChildCampaignList.cshtml" />
+    <Content Include="Views\TacticCampaign\TacticCampaignList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
