--- a/MRM/MRM.csproj
+++ b/MRM/MRM.csproj
@@ -239,6 +239,7 @@
     <Content Include="Content\dataTables.bootstrap.css" />
     <Content Include="Content\datepicker3.css" />
     <Content Include="Content\font-awesome.min.css" />
+    <Content Include="Content\Image\nokia_white_logo.png" />
     <Content Include="Content\ionicons.min.css" />
     <Content Include="Content\jquery-ui-1.12.1\jquery-ui-1.12.1\AUTHORS.txt" />
     <Content Include="Content\jquery-ui-1.12.1\jquery-ui-1.12.1\external\jquery\jquery.js" />
@@ -298,6 +299,7 @@
     <None Include="Properties\PublishProfiles\mrmlight - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\mrmlightapp - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\mrmlightv2 - Web Deploy.pubxml" />
+    <None Include="Properties\PublishProfiles\MRMQA - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\CampaignList.js" />
     <Content Include="Scripts\ChildCampaignList.js" />
