--- a/MRM.Database/MRM.Database.csproj
+++ b/MRM.Database/MRM.Database.csproj
@@ -74,6 +74,10 @@
     <Compile Include="Migrations\201705311147380_LocalFisrt_310517.Designer.cs">
       <DependentUpon>201705311147380_LocalFisrt_310517.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201707140514243_14julyForDemo.cs" />
+    <Compile Include="Migrations\201707140514243_14julyForDemo.Designer.cs">
+      <DependentUpon>201707140514243_14julyForDemo.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Model\BusinessGroup.cs" />
     <Compile Include="Model\BusinessLine.cs" />
@@ -102,6 +106,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201705311147380_LocalFisrt_310517.resx">
       <DependentUpon>201705311147380_LocalFisrt_310517.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707140514243_14julyForDemo.resx">
+      <DependentUpon>201707140514243_14julyForDemo.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
