--- a/MRM.Business/MRM.Business.csproj
+++ b/MRM.Business/MRM.Business.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Interfaces\IBusinessLineServices.cs" />
     <Compile Include="Interfaces\IChildCampaignServices.cs" />
     <Compile Include="Interfaces\IGeographyServices.cs" />
+    <Compile Include="Interfaces\IJourneyStageServices.cs" />
     <Compile Include="Interfaces\IMasterCampaignServices.cs" />
     <Compile Include="Interfaces\IMetricReachServices.cs" />
     <Compile Include="Interfaces\IMetricResponseServices.cs" />
@@ -66,6 +67,7 @@
     <Compile Include="Services\BusinessGroupServices.cs" />
     <Compile Include="Services\BusinessLineServices.cs" />
     <Compile Include="Services\ChildCampaignServices.cs" />
+    <Compile Include="Services\JourneyStageServices.cs" />
     <Compile Include="Services\MasterCampaignServices.cs" />
     <Compile Include="Services\MetricReachServices.cs" />
     <Compile Include="Services\MetricResponseServices.cs" />
