--- a/MRM.Database/MRM.Database.csproj
+++ b/MRM.Database/MRM.Database.csproj
@@ -70,9 +70,9 @@
     <Compile Include="GenericRepository\GenericRepository.cs" />
     <Compile Include="GenericRepository\IGenericRepository.cs" />
     <Compile Include="GenericUnitOfWork\GenericUnitOfWork .cs" />
-    <Compile Include="Migrations\201705311147380_LocalFisrt_310517.cs" />
-    <Compile Include="Migrations\201705311147380_LocalFisrt_310517.Designer.cs">
-      <DependentUpon>201705311147380_LocalFisrt_310517.cs</DependentUpon>
+    <Compile Include="Migrations\201707190848569_OnDemo19072017.cs" />
+    <Compile Include="Migrations\201707190848569_OnDemo19072017.Designer.cs">
+      <DependentUpon>201707190848569_OnDemo19072017.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Model\BusinessGroup.cs" />
@@ -81,6 +81,7 @@
     <Compile Include="Model\CommonEntity.cs" />
     <Compile Include="Model\Geography.cs" />
     <Compile Include="Model\Industry.cs" />
+    <Compile Include="Model\JourneyStage.cs" />
     <Compile Include="Model\MasterCampaign.cs" />
     <Compile Include="Model\MetricReach.cs" />
     <Compile Include="Model\MetricResponse.cs" />
@@ -100,8 +101,8 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201705311147380_LocalFisrt_310517.resx">
-      <DependentUpon>201705311147380_LocalFisrt_310517.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201707190848569_OnDemo19072017.resx">
+      <DependentUpon>201707190848569_OnDemo19072017.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
