--- a/MRM/Web.config
+++ b/MRM/Web.config
@@ -11,7 +11,8 @@
   <connectionStrings>
     <!--<add name="DBConnectionString" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=MRMDatabse;Integrated Security=True; MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />-->
     <!--<add name="DBConnectionString" connectionString="Server=tcp:mrmlight.database.windows.net,1433;Initial Catalog=MRMDatabse;Persist Security Info=False;User ID=mrmadmin;Password=mrm@1234;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30" providerName="System.Data.SqlClient" />-->
-    <add name="DBConnectionString" connectionString="Server=tcp:mrmlight.database.windows.net,1433;Initial Catalog=MRMTestDatabse;Persist Security Info=False;User ID=mrmadmin;Password=mrm@1234;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30" providerName="System.Data.SqlClient" />
+    <!--<add name="DBConnectionString" connectionString="Server=tcp:mrmlight.database.windows.net,1433;Initial Catalog=MRMTestDatabse;Persist Security Info=False;User ID=mrmadmin;Password=mrm@1234;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30" providerName="System.Data.SqlClient" />-->
+  <add name="DBConnectionString" connectionString="data source=HANULPT-37\SQLEXPRESS;Initial Catalog=mrmtestdatabse;User Id=sa;Password=admin@123;multipleactiveresultsets=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
