--- a/MRM/Web.config
+++ b/MRM/Web.config
@@ -11,8 +11,8 @@
   <connectionStrings>
     <!--<add name="DBConnectionString" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=MRMDatabse;Integrated Security=True; MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />-->
     <!--<add name="DBConnectionString" connectionString="Server=tcp:mrmlight.database.windows.net,1433;Initial Catalog=MRMDatabse;Persist Security Info=False;User ID=mrmadmin;Password=mrm@1234;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30" providerName="System.Data.SqlClient" />-->
-    <!--<add name="DBConnectionString" connectionString="Server=tcp:mrmlight.database.windows.net,1433;Initial Catalog=MRMTestDatabse;Persist Security Info=False;User ID=mrmadmin;Password=mrm@1234;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30" providerName="System.Data.SqlClient" />-->
-  <add name="DBConnectionString" connectionString="data source=HANULPT-37\SQLEXPRESS;Initial Catalog=mrmtestdatabse;User Id=sa;Password=admin@123;multipleactiveresultsets=True;" providerName="System.Data.SqlClient" />
+    <add name="DBConnectionString" connectionString="Server=tcp:mrmlight.database.windows.net,1433;Initial Catalog=MRMTestDatabse;Persist Security Info=False;User ID=mrmadmin;Password=mrm@1234;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30" providerName="System.Data.SqlClient" />
+  <!--<add name="DBConnectionString" connectionString="data source=HANULPT-37\SQLEXPRESS;Initial Catalog=mrmtestdatabse;User Id=sa;Password=admin@123;multipleactiveresultsets=True;" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -30,7 +30,7 @@
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
     <customErrors mode="Off" />
-    <globalization uiCulture="en" culture="en-GB"/>
+    <globalization uiCulture="en" culture="en-GB" />
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
