--- a/MRM/MRM.csproj
+++ b/MRM/MRM.csproj
@@ -246,6 +246,8 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\SegmentHierarchy.cs" />
+    <Compile Include="Models\BGHierarchy.cs" />
     <Compile Include="Models\DropDownResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
