--- a/MRM.Common/MRM.Common.csproj
+++ b/MRM.Common/MRM.Common.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{AB8395EF-CDA7-462D-BC95-916DFDDA8B8F}</ProjectGuid>
+    <ProjectGuid>{DBF5809C-CA2A-44C1-8106-7B5DF7DF62A3}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MRM.ViewModel</RootNamespace>
-    <AssemblyName>MRM.ViewModel</AssemblyName>
+    <RootNamespace>MRM.Common</RootNamespace>
+    <AssemblyName>MRM.Common</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,7 +31,6 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -41,26 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CampaignType.cs" />
-    <Compile Include="ChildCampaignViewModel.cs" />
-    <Compile Include="CommanResponse.cs" />
-    <Compile Include="DigitalTouchPointViewModel.cs" />
-    <Compile Include="MasterCampaignViewModel.cs" />
-    <Compile Include="MasterCampaignViewModelListing.cs" />
-    <Compile Include="MetricReachViewModel.cs" />
-    <Compile Include="MetricResponseViewModel.cs" />
+    <Compile Include="Util.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TacticCampaignViewModel.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\MRM.Common\MRM.Common.csproj">
-      <Project>{DBF5809C-CA2A-44C1-8106-7B5DF7DF62A3}</Project>
-      <Name>MRM.Common</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\MRM.Database\MRM.Database.csproj">
-      <Project>{54664c69-9343-4c44-85f6-dbc2a27d4c63}</Project>
-      <Name>MRM.Database</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
