--- a/MRM.Database/MRM.Database.csproj
+++ b/MRM.Database/MRM.Database.csproj
@@ -70,6 +70,10 @@
     <Compile Include="GenericRepository\GenericRepository.cs" />
     <Compile Include="GenericRepository\IGenericRepository.cs" />
     <Compile Include="GenericUnitOfWork\GenericUnitOfWork .cs" />
+    <Compile Include="Migrations\201708050751556_ttt.cs" />
+    <Compile Include="Migrations\201708050751556_ttt.Designer.cs">
+      <DependentUpon>201708050751556_ttt.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Model\BusinessGroup.cs" />
     <Compile Include="Model\BusinessLine.cs" />
@@ -80,10 +84,12 @@
     <Compile Include="Model\Industry.cs" />
     <Compile Include="Model\JourneyStage.cs" />
     <Compile Include="Model\MasterCampaign.cs" />
+    <Compile Include="Model\Medium.cs" />
     <Compile Include="Model\MetricReach.cs" />
     <Compile Include="Model\MetricResponse.cs" />
     <Compile Include="Model\MRMContext.cs" />
     <Compile Include="Model\Segment.cs" />
+    <Compile Include="Model\Source.cs" />
     <Compile Include="Model\TacticCampaign.cs" />
     <Compile Include="Model\TacticCampaignReachResponse.cs" />
     <Compile Include="Model\TacticType.cs" />
@@ -96,6 +102,11 @@
       <SubType>Designer</SubType>
     </None>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201708050751556_ttt.resx">
+      <DependentUpon>201708050751556_ttt.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
